--- a/decode/utils/reference_files/reference.yaml
+++ b/decode/utils/reference_files/reference.yaml
@@ -19,8 +19,7 @@ Evaluation:
   dist_vol:
   match_dims: 3
 Hardware:
-  device: cuda
-  device_ix: 0
+  device: cuda:0
   device_simulation: cuda:0
   num_worker_train: 4
   torch_threads: 4
