--- a/.pep8speaks.yml
+++ b/.pep8speaks.yml
@@ -4,3 +4,6 @@ scanner:
 
 no_blank_comment: True
 descending_issues_order: False
+
+flake8:  # Same as scanner.linter value. Other option is flake8
+    max-line-length: 120
