--- a/environment.yaml
+++ b/environment.yaml
@@ -1,7 +1,8 @@
-name: decode_dev_cuda
+name: decode_dev
 
 channels:
   - turagalab/label/dev
+  - turagalab
   - pytorch
   - conda-forge
   - defaults
@@ -23,7 +24,7 @@ dependencies:
   # actual package
   - python=3.9
   - pytorch=1.8
-  - cudatoolkit
+  - cpuonly  # fake package (aka flag) for pytorch, otherwise it installs a cudatoolkit
   - click
   - deprecated
   - gitpython>=3.1
