--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Set Python Version ${{ matrix.python-version }}
         # hacky way to change the python version by temporariliy editing the environment file
         run: |
-          sed -i -E 's/(python=)(.*)/\1'${{ matrix.python-version }}'/' ./environment_cpu.yaml
-          cat environment_cpu.yaml | grep python
+          sed -i -E 's/(python=)(.*)/\1'${{ matrix.python-version }}'/' ./environment.yaml
+          cat environment.yaml | grep python
 
       - uses: conda-incubator/setup-miniconda@v2
         with:
