Revert "Rename environment.yaml, rename environment, rm dependencies (not yet ready)"
This reverts commit 750ecf92a3008261d8ecf3ce59b3f27d513edb10.

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,7 +2,7 @@
 version: 2
 
 conda:
-  environment: environment.yaml
+  environment: environment_cpu.yaml
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
