--- a/environment_cuda.yaml
+++ b/environment_cuda.yaml
@@ -1,8 +1,7 @@
-name: decode_dev
+name: decode_dev_cuda
 
 channels:
   - turagalab/label/dev
-  - turagalab
   - pytorch
   - conda-forge
   - defaults
@@ -24,7 +23,7 @@ dependencies:
   # actual package
   - python=3.9
   - pytorch=1.8
-  - cpuonly  # fake package (aka flag) for pytorch, otherwise it installs a cudatoolkit
+  - cudatoolkit
   - click
   - deprecated
   - gitpython>=3.1
