--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.10.0.alpha.4
+current_version = 0.10.0.rc.1
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)\.(?P<build>\d+))?
@@ -12,7 +12,7 @@ optional_value = rc
 first_value = alpha
 values = 
 	alpha
-	beta
+	b
 	rc
 
 [bumpversion:part:build]
