--- a/.github/workflows/build-upload.yml
+++ b/.github/workflows/build-upload.yml
@@ -46,7 +46,7 @@ jobs:
       run: |
         cd ./conda
         while read PATH; do
-          $CONDA/bin/anaconda -t $ANACONDA_TOKEN upload -l ${{ env.ANACONDA_LABEL }} -u Turagalab $PATH
+          $CONDA/bin/anaconda -t $ANACONDA_TOKEN upload --force -l ${{ env.ANACONDA_LABEL }} -u Turagalab $PATH
         done < $FILENAMES
 
 
