--- a/.github/workflows/build-upload.yml
+++ b/.github/workflows/build-upload.yml
@@ -27,8 +27,8 @@ jobs:
     - name: Build DECODE
       run: |
         cd ./conda
-        $CONDA/bin/conda-build -c turagalab -c turagalab/label/dev -c pytorch -c conda-forge decode
-        $CONDA/bin/conda-build -c turagalab -c turagalab/label/dev -c pytorch -c conda-forge decode --output > $FILENAMES
+        $CONDA/bin/conda-build -c turagalab -c turagalab/label/rc -c turagalab/label/dev -c pytorch -c conda-forge decode
+        $CONDA/bin/conda-build -c turagalab -c turagalab/label/rc -c turagalab/label/dev -c pytorch -c conda-forge decode --output > $FILENAMES
 
     - name: Change anaconda label on release
       if: github.event.release
@@ -83,4 +83,3 @@ jobs:
         asset_path: ./dist/${{ steps.pip-build.outputs.wheel_filename }}
         asset_name: ${{ steps.pip-build.outputs.wheel_filename }}
         asset_content_type: binary/octet-stream
-
