--- a/environment.yaml
+++ b/environment.yaml
@@ -1,19 +1,14 @@
 name: decode_dev
 
 channels:
-  - turagalab
   - turagalab/label/rc
-  - turagalab/label/dev
+  - turagalab
   - pytorch
   - conda-forge
-  - defaults
 
 dependencies:
-  # for building (decode and splinepsf)
+  # for building
   - bump2version
-  - cmake=3.15
-  - ninja
-  - pybind11>=2.4
 
   # docs
   - recommonmark  # markdown for sphinx
@@ -23,7 +18,7 @@ dependencies:
   - pydata-sphinx-theme
 
   # actual package
-  - python=3.9
+  - python=3.8
   - pytorch=1.7.1
   - cpuonly  # fake package (aka flag) for pytorch, otherwise it installs a cudatoolkit
   - click
@@ -40,7 +35,7 @@ dependencies:
   - seaborn=0.10
   - scikit-image
   - scikit-learn
-  - spline>=0.10.0.rc.2
+  - spline=0.10.0.rc.2
   - tensorboard
   - tifffile>=2020.2
   - tqdm
