--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,19 +1,21 @@
 [bumpversion]
-current_version = 0.10.0.rc.2
+current_version = 0.10.0dev1
 commit = True
 tag = True
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)\.(?P<build>\d+))?
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)((?P<release>[a-z]+)(?P<build>\d+))?
 serialize = 
-	{major}.{minor}.{patch}.{release}.{build}
+	{major}.{minor}.{patch}{release}{build}
 	{major}.{minor}.{patch}
 
 [bumpversion:part:release]
 optional_value = rc
-first_value = alpha
+first_value = a
 values = 
-	alpha
+	dev
+	a
 	b
 	rc
+	post
 
 [bumpversion:part:build]
 
