Change env name

--- a/.github/workflows/build-upload.yml
+++ b/.github/workflows/build-upload.yml
@@ -62,7 +62,7 @@ jobs:
         environment-file: environment.yaml
         python-version: 3.8
         auto-activate-base: false
-        activate-environment: pip-build
+        activate-environment: decode_dev
 
     - name: Build DECODE (pip)
       id: pip-build
