--- a/environment.yaml
+++ b/environment.yaml
@@ -20,7 +20,7 @@ dependencies:
   # actual package
   - python=3.8
   - pytorch=1.7.1
-  - cpuonly  # fake package (aka flag) for pytorch, otherwise it installs a cudatoolkit
+  - cpuonly  # or cudatoolkit
   - click
   - deprecated
   - gitpython>=3.1
