--- a/gateway.yaml
+++ b/gateway.yaml
@@ -50,5 +50,5 @@ examples:
 
 wheels:
   decode: https://github.com/TuragaLab/DECODE/releases/download/v0.9.3/decode-0.9.3-py3-none-any.whl
-  decode_rc: https://github.com/TuragaLab/DECODE/releases/download/v0.10.0.rc.2/decode-0.10.0rc2-py3-none-any.whl
+  decode_rc: https://github.com/TuragaLab/DECODE/releases/download/v0.10.0rc3/decode-0.10.0rc3-py3-none-any.whl
   spline_py37: https://github.com/TuragaLab/SplinePSF/releases/download/v0.10.0/spline-0.10.0-cp37-cp37m-linux_x86_64.whl
