--- a/conda/decode/meta.yaml
+++ b/conda/decode/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: decode
-  version: "0.10.0rc3"  # do not modify by hand; set and sync with bumpversion
+  version: "0.10.0dev1"  # do not modify by hand; set and sync with bumpversion
 
 source:
      - path: ../..
