--- a/conda/decode/meta.yaml
+++ b/conda/decode/meta.yaml
@@ -19,9 +19,9 @@ requirements:
     - numpy {{ numpy }}
 
   run:
-    - python >=3.6,<3.9
+    - python >=3.7,<3.9
     - {{ pin_compatible('numpy', max_pin='x.x') }}
-    - pytorch>=1.7.1
+    - pytorch=1.7.1
     - click
     - deprecated
     - gitpython>=3.1
