--- a/environment.yaml
+++ b/environment.yaml
@@ -1,8 +1,8 @@
 name: decode_dev
 
 channels:
-#  - turagalab/label/dev
-#  - turagalab/label/rc
+  #  - turagalab/label/dev
+  #  - turagalab/label/rc
   - turagalab
   - pytorch
   - nvidia
@@ -22,13 +22,14 @@ dependencies:
   # actual package
   - python=3.8
   - pytorch=1.7.1
-  - cpuonly  # or cudatoolkit
+  - cudatoolkit=11.0
   - click
   - deprecated
   - gitpython>=3.1
   - h5py
   - line_profiler
   - matplotlib
+  - omegaconf >=2.1
   - pandas
   - pytest
   - pyyaml
