--- a/decode/utils/reference_files/reference.yaml
+++ b/decode/utils/reference_files/reference.yaml
@@ -84,8 +84,8 @@ InOut:
   calibration_file:  # spline calib
   checkpoint_init:   # initialise from checkpoint (i.e. resume training)
   run_id:  # subdir name, leave blank for auto
-  model_dir:  # model output dir (parent of subdir named run_id)
-  log_dir:  # log output dir (parent of subdir named run_id)
+  model_dir:  # model output dir (parent of subdir named {run_id})
+  log_dir:  # log output dir (parent of subdir named {run_id})
 Meta:
   version:
 PostProcessing: SpatialIntegration  # (blank) for no post-processing or LookUp
