--- a/environment.yaml
+++ b/environment.yaml
@@ -20,7 +20,7 @@ dependencies:
   - pydata-sphinx-theme
 
   # actual package
-  - python>=3.8
+  - python>=3.8,<4
   - pytorch=1.7.1
   - cpuonly  # or cudatoolkit
   - click
