escape python version in matrix

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.8, 3.9, 3.10]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
       - uses: actions/checkout@v2
@@ -30,11 +30,6 @@ jobs:
           channel-priority: strict
           activate-environment: decode_dev
           environment-file: environment.yaml
-
-      - name: Install backport of importlib_resources for Python 3.6
-        run: |
-          conda install -y importlib_resources
-        if: matrix.python-version <= '3.6'
 
       # Run the specific test
       - name: Run pytest (without big web and graphical output)
