Add missing pydantic

--- a/conda/decode/meta.yaml
+++ b/conda/decode/meta.yaml
@@ -30,6 +30,7 @@ requirements:
     - importlib_resources
     - matplotlib
     - pandas
+    - pydantic
     - pytest
     - pyyaml
     - requests
