--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -33,4 +33,4 @@ jobs:
 
       - name: Run unit tests
         run: |
-          python -m pytest -m "not (webbig or plot)" test
+          python -m pytest -m "not (webbig or plot)" test/unit
