--- a/environment.yaml
+++ b/environment.yaml
@@ -1,7 +1,7 @@
 name: decode_dev
 
 channels:
-  #  - turagalab/label/dev
+  - turagalab/label/dev
   #  - turagalab/label/rc
   - turagalab
   - pytorch
@@ -32,13 +32,14 @@ dependencies:
   - pandas
   - pydantic
   - pytest
+  - pytest-xdist
   - pyyaml
   - requests
   - scipy
   - seaborn=0.10
   - scikit-image
   - scikit-learn
-  - spline=0.10.0
+  - spline>=0.10.0
   - tensorboard
   - tifffile>=2020.2
   - tqdm
