--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -16,20 +16,26 @@ jobs:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set Python Version ${{ matrix.python-version }}
-        # hacky way to change the python version by temporariliy editing the environment file
-        run: |
-          sed -i -E 's/(python=)(.*)/\1'${{ matrix.python-version }}'/' ./environment.yaml
-          cat environment.yaml | grep python
+#      - uses: actions/checkout@v2
+#      - name: Set Python Version ${{ matrix.python-version }}
+#        # hacky way to change the python version by temporariliy editing the environment file
+#        run: |
+#          sed -i -E 's/(python=)(.*)/\1'${{ matrix.python-version }}'/' ./environment.yaml
+#          cat environment.yaml | grep python
+#
+#      - uses: conda-incubator/setup-miniconda@v2
+#        with:
+#          # mamba-version: "*"  # does not work reliably atm
+#          # channels: turagalab/label/dev,turagalab,pytorch,conda-forge,defaults
+#          channel-priority: strict
+#          activate-environment: decode_dev
+#          environment-file: environment.yaml
 
-      - uses: conda-incubator/setup-miniconda@v2
+      - name: Install Conda environment with Micromamba
+        uses: mamba-org/provision-with-micromamba@main
         with:
-          # mamba-version: "*"  # does not work reliably atm
-          # channels: turagalab/label/dev,turagalab,pytorch,conda-forge,defaults
-          channel-priority: strict
-          activate-environment: decode_dev
-          environment-file: environment.yaml
+          extra-specs: |
+            python=${{ matrix.python-version }}
 
       - name: Run unit tests
         run: |
