--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install Conda environment with Micromamba
         uses: mamba-org/provision-with-micromamba@main
         with:
-          environment-file: environment.yaml
+          environment-file: ../environment.yaml
           extra-specs: |
             python=${{ matrix.python-version }}
 
