--- a/conda/decode/meta.yaml
+++ b/conda/decode/meta.yaml
@@ -21,7 +21,7 @@ requirements:
   run:
     - python >=3.6,<3.9
     - {{ pin_compatible('numpy', max_pin='x.x') }}
-    - pytorch=1.7.1
+    - pytorch=1.12.0
     - click
     - deprecated
     - gitpython>=3.1
@@ -38,7 +38,7 @@ requirements:
     - scikit-learn
     - spline=0.10.0
     - tensorboard
-    - tifffile>=2021.1
+    - tifffile >=2021.1,<=2021.11,2
     - tqdm
 
   test:
