--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,6 +1,11 @@
 # Required
 version: 2
 
+build:
+  os: "ubuntu-20.04"
+  tools:
+    python: "mambaforge-4.10"
+
 conda:
   environment: environment.yaml
 
