--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -23,6 +23,10 @@ values =
 search = version='{current_version}',
 replace = version='{new_version}',
 
+[bumpversion:file:docs/source/conf.py]
+search = release = "{current_version}"
+replace = release = "{new_version}"
+
 [bumpversion:file:conda/decode/meta.yaml]
 search = version: "{current_version}"
 replace = version: "{new_version}"
