--- a/conda/decode/meta.yaml
+++ b/conda/decode/meta.yaml
@@ -21,7 +21,8 @@ requirements:
   run:
     - python >=3.7,<4
     - {{ pin_compatible('numpy', max_pin='x.x') }}
-    - pytorch=1.11
+    - pytorch=1.12
+    - pytorch-lightning
     - click
     - deprecated
     - gitpython>=3.1
