Refactor ix window, prototype training
prototype sampler for training

rm comment

rm comment

Outsource IxWindow

--- a/environment.yaml
+++ b/environment.yaml
@@ -43,7 +43,7 @@ dependencies:
   - seaborn=0.10
   - scikit-image
   - scikit-learn
-  - spline>=0.10.0  # spline on apple silicon
+  - spline>=0.10.0
   - tensorboard
   - tifffile>=2020.2
   - tqdm
