--- a/environment.yaml
+++ b/environment.yaml
@@ -30,7 +30,7 @@ dependencies:
   - pytest
   - pyyaml
   - requests
-  - scipy
+  - scipy=1.8
   - seaborn=0.10
   - scikit-image
   - scikit-learn
