--- a/environment.yaml
+++ b/environment.yaml
@@ -1,4 +1,4 @@
-name: decode_dev
+name: decode_0100_scipy
 
 channels:
   - turagalab
@@ -16,7 +16,7 @@ dependencies:
   - sphinx-autodoc-typehints
 
   # actual package
-  - python=3.9
+  - python=3.7
   - pytorch=1.12.0
   - cpuonly  # - cudatoolkit=11.3
   - numpy=1.19
@@ -30,7 +30,7 @@ dependencies:
   - pytest
   - pyyaml
   - requests
-  - scipy=1.8
+  - scipy >=1.6,<=1.8
   - seaborn=0.10
   - scikit-image
   - scikit-learn
