--- a/environment.yaml
+++ b/environment.yaml
@@ -6,6 +6,7 @@ channels:
   # - turagalab/label/rc
   - turagalab
   - pytorch
+  - nvidia
   - conda-forge
 
 dependencies:
@@ -20,8 +21,7 @@ dependencies:
 
   # actual package
   - python=3.10
-  - pytorch=1.12.0
-  - cpuonly  # - cudatoolkit=11.3
+  - pytorch=1.13
   - pytorch-lightning
   - click
   - deprecated
